k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      container: client-web
  template:
    metadata:
      labels:
        container: client-web
    spec:
      containers:
      - name: cont-client
        image: fchwpo/multi-client
        ports:
          - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: 128M
