k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      container: server
  template:
    metadata:
      labels:
        container: server
    spec:
      containers:
      - name: cont-server
        image: stephengrider/multi-server
        ports:
          - containerPort: 5000
        resources:
          limits:
            cpu: "1"
            memory: 256M
