k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      container: worker
  template:
    metadata:
      labels:
        container: worker
    spec:
      containers:
        - name: cont-worker
          image: fchwpo/multi-worker
          # resources:
          #   limits:
          #     cpu: "1"
          #     memory: 128M
