k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod 
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - multik8s.vshubham.co
      - www.multik8s.vshubham.co
      secretName: multik8s-vshubham-co
  rules:
    - http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 9298
          - path: /(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 9297
